[project]
name = "fcpy"
authors = [
    {name = "Jaewook Clemens", email = "jaewooklee042@gmail.com"}
]
description = "Test f cpp py."
keywords = [
    "geometry",
    "visualization",
    "mesh",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
]
version = "0.0.0"

[tool.setuptools]
packages = [
    "fcpy",
]
